[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg==2.9.0",
    "mkdocs==1.6",
    "mkdocs-glightbox==0.3.4",
    "mkdocs-material[imaging]==9.7.6",
    "neoteroi-mkdocs==1.0.5",
    "pillow==12.2.0",
]
